--- a/minggu3/acara_14/app/src/main/res/values/strings.xml
+++ b/minggu3/acara_14/app/src/main/res/values/strings.xml
@@ -1,27 +1,27 @@
 <resources>
     <string name="app_name">Minggu3</string>
     <string-array name="countries_arry">
-    <item> name="Afghanistan" </item>
-    <item> name="Albania" </item>
-    <item> name="Algeria" </item>
-    <item> name="America" </item>
-    <item> name="Andorra" </item>
-    <item> name="Angola" </item>
-    <item> name="Anguilla" </item>
-    <item> name="Antarctica" </item>
-    <item> name="Antigua and Barbuda" </item>
-    <item> name="Antarctica" </item>
-    <item> name="Argentina" </item>
-    <item> name="Armenia" </item>
-    <item> name="Aruba" </item>
-    <item> name="Australia" </item>
-    <item> name="Austria" </item>
-    <item> name="Azerbaijan" </item>
-    <item> name="Bahrain" </item>
-    <item> name="Bangladesh" </item>
-    <item> name="Barbados" </item>
-    <item> name="Belarus" </item>
-    <item> name="Belgium" </item>
+    <item> "Afghanistan" </item>
+    <item> "Albania" </item>
+    <item> "Algeria" </item>
+    <item> "America" </item>
+    <item> "Andorra" </item>
+    <item> "Angola" </item>
+    <item> "Anguilla" </item>
+    <item> "Antarctica" </item>
+    <item> "Antigua and Barbuda" </item>
+    <item> "Antarctica" </item>
+    <item> "Argentina" </item>
+    <item> "Armenia" </item>
+    <item> "Aruba" </item>
+    <item> "Australia" </item>
+    <item> "Austria" </item>
+    <item> "Azerbaijan" </item>
+    <item> "Bahrain" </item>
+    <item> "Bangladesh" </item>
+    <item> "Barbados" </item>
+    <item> "Belarus" </item>
+    <item> "Belgium" </item>
     </string-array>
 
     <string name="action_settings">Settings</string>
